# mposcli

./: .pre-commit-config.yaml  README.md  cli.py  dev-cli.py  pyproject.toml
.run/: Template Python tests.run.xml  Template Python.run.xml  Unittests __all__.run.xml  cli --help.run.xml  dev-cli --help.run.xml  dev-cli test.run.xml
mposcli/: __init__.py  __main__.py  constants.py  fs_utils.py  mpos_utils.py  mpremote_cp_utils.py  tools.py  user_input.py
mposcli/cli_app/: __init__.py  build.py  copy_mpos.py  flash.py  run_deskop.py  shell_completion.py  update.py
mposcli/cli_dev/: __init__.py  __main__.py  code_style.py  packaging.py  shell_completion.py  testing.py  update_readme_history.py
mposcli/tests/: __init__.py  test_doctests.py  test_mpremote_cp_utils.py  test_project_setup.py  test_readme.py
mposcli/utilities/: mpremote.py
